--- a/views/zmones.handlebars
+++ b/views/zmones.handlebars
@@ -8,6 +8,9 @@
             {{this.pavarde}}
         </td>
         <td>
+            {{this.gimimoData}}
+        </td>
+        <td>
             {{this.alga}}
         </td>
         <td>
