--- a/views/zmones.handlebars
+++ b/views/zmones.handlebars
@@ -8,7 +8,7 @@
             {{this.pavarde}}
         </td>
         <td>
-            {{this.gimimoData}}
+            {{dateFormat this.gimimoData}}
         </td>
         <td>
             {{this.alga}}
