get zmogus, save zmogus

--- a/views/zmones.handlebars
+++ b/views/zmones.handlebars
@@ -1,3 +1,4 @@
+<a href="/zmones/naujas">Naujas</a>
 <table>
     {{#each zmones}}
     <tr>
@@ -14,7 +15,7 @@
             {{this.alga}}
         </td>
         <td>
-            <a href="/vienas/{{this.id}}">view</a>
+            <a href="/zmones/{{this.id}}">Edit</a>
         </td>
     </tr>
     {{/each}}
