--- a/views/zmones.handlebars
+++ b/views/zmones.handlebars
@@ -17,7 +17,9 @@
         <td>
             <a href="/zmones/{{this.id}}">Edit</a>
         </td>
+        <td>
+            <a href="/zmones/{{this.id}}/delete">Delete</a>
+        </td>
     </tr>
     {{/each}}
 </table>
-<a href="/zmones/trinti">Trinti</a>
