kontaktu saraso pridejimas

--- a/views/zmones.handlebars
+++ b/views/zmones.handlebars
@@ -20,6 +20,9 @@
         <td>
             <a href="/zmones/{{this.id}}/delete">Delete</a>
         </td>
+        <td>
+            <a href="/zmones/{{this.id}}/kontaktai" style="padding-left:30px;">{{this.vardas}} Kontaktai</a>
+        </td>
     </tr>
     {{/each}}
 </table>
