--- a/zmones(destytojo)/views/zmogus.handlebars
+++ b/zmones(destytojo)/views/zmogus.handlebars
@@ -5,7 +5,7 @@
     Vardas: <input type="text" name="vardas" value="{{ vardas }}"><br>
     Pavarde: <input type="text" name="pavarde" value="{{ pavarde }}"><br>
     Gimimo data: <input type="date" name="gimimoData" value="{{dateFormat gimimoData}}"><br>
-    Pavarde: <input type="text" name="alga" value="{{ alga }}"><br>
+    Alga: <input type="text" name="alga" value="{{ alga }}"><br>
     <input type="submit" value="Save">
 </form>
 <a href="/zmones">Back</a>
