--- a/zmones(destytojo)/views/zmones.handlebars
+++ b/zmones(destytojo)/views/zmones.handlebars
@@ -17,6 +17,12 @@
         <td>
             <a href="/zmones/{{this.id}}">edit</a>
         </td>
+        <td>
+            <a href="/zmones/{{this.id}}/delete">X</a>
+        </td>
+        <td>
+            <a href="/zmones/{{this.id}}/kontaktai">Kontaktai</a>
+        </td>
     </tr>
 {{/each}}
 </table>
